<resources>
    <string name="app_name">CRM Follow­Up</string>
    <string name="fontRoboto">Oswald-Regular.ttf</string>
    <string name="fontIcon">fontawesome-webfont.ttf</string>
    <string name="icUser"></string>
    <string name="icPassword"></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="signinLogin">Login</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="begin">Begin</string>
    <string name="solo">Solo</string>
    <string name="sampleQuote">"The meaning of life is to give life a meaning" - Joe Shmoe</string>
    <string name="copyright">© 2016 Support Visions</string>
    <string name="crMsg">I agree to all this terms.</string>
    <string name="json">.json</string>
    <string name="api_logic_error">Invite:</string>
    <string name="api_login_alert">Login required:</string>
    <string name="api_login_msg">Please login to continue.</string>
    <string name="api_unauthorized_alert">Unauthorized:</string>
    <string name="api_unauthorized_msg">Please check user permissions.</string>
    <string name="api_no_internet_alert">No Internet:</string>
    <string name="api_no_internet_msg">Please check your Internet connection.</string>
    <string name="api_server_alert">Unable to communicate:</string>
    <string name="api_server_msg">Please try again in a few moments</string>
    <string name="api_error_alert">API ERROR:</string>
    <string name="api_error_msg">Please check API DOCS.</string>
    <string name="api_unexpected_error_alert">UNEXPECTED ERROR:</string>
    <string name="api_unexpected_error_msg">Please contact developer.</string>
    <string name="api_file_upload_fail">Unable to upload file. </string>
    <string name="process_progress_msg">Please wait...</string>
    <string name="alert">Invite</string>
    <string name="ok">OK</string>
    <string name="loading">Loading...</string>
    <string name="people">PEOPLE</string>
    <string name="toDo">TO DO</string>
    <string name="calender">CALENDER</string>
    <string name="reports">REPORTS</string>
    <string name="settings">SETTINGS</string>
    <string name="comunity">COMMUNITY</string>
    <string name="backup">BACKUP/RESTORE</string>
    <string name="emailTemplate">EMAIL TEMPLATES</string>
    <string name="leadConnectMsg">22 Leads to connect with</string>
    <string name="contactConnectMsg">15 Contacts to connect with</string>
    <string name="taskCompleteMsg">3 tasks to complete</string>
    <string name="leads">Leads</string>
    <string name="contacts">Contacts</string>
    <string name="forwarded">Forwarded</string>
    <string name="dontCallLst">Don\'t Call list</string>
    <string name="icSearch">&#xf002;</string>
    <string name="icMobile">&#xf10b;</string>
    <string name="icEmail">&#xf003;</string>
    <string name="icFilter">&#xf0b0;</string>
    <string name="icPlus">&#xf067;</string>
    <string name="icSort">&#xf0dc;</string>
    <string name="icChecked">&#xf046;</string>
    <string name="icMove">&#xf064;</string>
    <string name="search">Search</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="lastActivity">Last Activity</string>
    <string name="lstContct">Day\'s since last contact</string>
    <string name="relationShip">Relationship</string>
    <string name="leadadded">Lead Added</string>
    <string name="title">Title</string>
    <string name="company">Company</string>
    <string name="deskPhone">Desk Phone</string>
    <string name="address">Address</string>
    <string name="mobilePhone">Mobile Phone</string>
    <string name="officePhone">Office Phone</string>
    <string name="email">Email</string>
    <string name="icMap">&#xf279;</string>
    <string name="Addleads">Add Lead</string>
    <string name="ViewLeads">View Lead</string>
    <string name="icDown">&#xf0d7;</string>
    <string name="industry">Industry</string>
    <string name="source">Source</string>
    <string name="addNote">Add Note</string>
    <string name="icHistory">&#xf1da;</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="followUpOn">Follow-up on</string>
    <string name="followUp">FOLLOW-UP</string>
    <string name="import_cap">IMPORT</string>
    <string name="export">EXPORT</string>
    <string name="lead">LEADS</string>
    <string name="contact">CONTACTS</string>
</resources>