<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.hrd.crm"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_app"
    android:fillViewport="true"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/llSearch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <com.hrd.custom.Header
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/bg_edittext"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp" >

            <com.hrd.custom.HrdTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/icSearch"
                android:textColor="@color/themeColor"
                android:textSize="@dimen/dp16"
                app:fontName="@string/fontIcon" />

            <com.hrd.custom.HrdEditText
                android:id="@+id/edtSearch"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:hint="@string/search"
                android:paddingBottom="5.0dip"
                android:paddingLeft="5.0dip"
                android:paddingRight="25.0dip"
                android:paddingTop="5.0dip"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="@dimen/dp16"
                app:fontName="@string/fontRoboto" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            android:padding="5dp" >

            <com.hrd.custom.HrdTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/icChecked"
                android:textColor="@color/white"
                android:textSize="@dimen/dp30"
                app:fontName="@string/fontIcon" />

            <com.hrd.custom.HrdTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/icMove"
                android:textColor="@color/white"
                android:textSize="@dimen/dp30"
                app:fontName="@string/fontIcon" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/lvLeads"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/llFilterOpt"
        android:layout_below="@+id/llSearch"
        android:cacheColorHint="#00000000"
        android:listSelector="#00000000" >
    </ListView>

    <LinearLayout
        android:id="@+id/llFilterOpt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:weightSum="1.5" >

        <com.hrd.custom.HrdTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/icMobile"
            android:textColor="@color/white"
            android:textSize="@dimen/dp30"
            app:fontName="@string/fontIcon" />

        <com.hrd.custom.HrdTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/icEmail"
            android:textColor="@color/white"
            android:textSize="@dimen/dp30"
            app:fontName="@string/fontIcon" />

        <com.hrd.custom.HrdTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/icSort"
            android:textColor="@color/white"
            android:textSize="@dimen/dp30"
            app:fontName="@string/fontIcon" />

        <com.hrd.custom.HrdTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/icFilter"
            android:textColor="@color/white"
            android:textSize="@dimen/dp30"
            app:fontName="@string/fontIcon" />

        <com.hrd.custom.HrdTextView
            android:id="@+id/txtAddLead"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/icPlus"
            android:textColor="@color/white"
            android:textSize="@dimen/dp30"
            app:fontName="@string/fontIcon" />
    </LinearLayout>

</RelativeLayout>