<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.hrd.crm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rlMain"
    android:background="@drawable/bg_app"
    android:orientation="vertical" >

    <com.hrd.custom.Header
        android:id="@+id/term_Header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <WebView
        android:id="@+id/tac_webview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#00000000"
        android:layout_above="@+id/llFooter"
        android:layout_below="@+id/term_Header" />

    <LinearLayout
        android:id="@+id/llFooter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >

        <com.hrd.custom.HrdCheckBox
            android:id="@+id/cbTerms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/crMsg"
            android:textSize="@dimen/dp18" 
            android:textColor="#ffffff"
            app:fontName="@string/fontRoboto"/>

        <com.hrd.custom.HrdTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:text="@string/copyright"
            android:textColor="#ffffffff"
            android:textSize="@dimen/dp14"
            app:fontName="@string/fontRoboto" />
    </LinearLayout>

</RelativeLayout>